assets/css/styles.css
/* Google font import for Unna and Manrope fonts */
@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Unna:ital,wght@0,400;0,700;1,400;1,700&display=swap');

/* CSS Variables */
:root {
    --primary-font: "Unna", serif;
    --secondary-font: "Manrope", sans-serif;
    --primary-color: #310A31; /* dark purple */
    --secondary-color: #847996; /* light purple */
    --tertiary-color: #1a6e4f; /* dark green */
    --highlight-color: #88B7B5; /* pale blue */
    --highlight-color-light: #a7cab1; /* pale green */
    --highlight-color-lightest: #f4ecd6; /* lightest beige */
}



/* Global styles*/

h1, h2, h3, h4, h5, h6 {
    font-family: 'Unna', serif;
    color: var(--highlight-color-lightest); 
}

p {
    font-family: 'Manrope', sans-serif;
    color: var(--highlight-color-lightest);
}

body {
    background-color: var(--secondary-color);
    padding-top: 40px; /* Adjusted for fixed navbar */
}

/* Navbar styles */

.navbar {
    background-color: var(--tertiary-color);
}

.navbar-brand,
.nav-link {
    color: var(--highlight-color-lightest);
}

.navbar-toggler {
    border-color: var(--highlight-color-lightest);
}

.navbar-collapse {
    background-color: var(--tertiary-color);
}

/* Hero section styles */

.hero {
    background-image: url("../images/background.png");
    background-color: #a7cab1; /* pale green */
    padding: 5% 7%;
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    margin: 2%;
    
}

.hero-intro {
    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
    background-color: rgba(0, 0, 0, 0.3);
    padding: 20px;
    border-radius: 8px;
    color: var(--highlight-color-lightest);
    text-align: center;
}

/* signs to watch for section styles */

.signs-to-watch p {
    color: var(--tertiary-color);
}

.signs-to-watch h3, h5 {
    color: var(--tertiary-color);
}

.signs-to-watch li {
    color: var(--tertiary-color);
    font-family: 'Manrope', sans-serif;

}

.signs-to-watch .accordion-button {
    color: var(--tertiary-color);
    background-color: var(--highlight-color-lightest);
}

.signs-to-watch .indicators-intro {
     color: var(--highlight-color-lightest);
}

/* Contact us styles */

.contact-us { 
   padding: 12px;
}


/* Footer styles */

footer {
    background-color: var(--tertiary-color);
}



/* grid visualisation CSS for testing */
/*
.container,
.row {
    border: 2px solid black;
}

.col-12 {
    border: 2px solid white;
    background-color: lightgray;
}
*/

